<resources>
    <string name="app_name">Welfare</string>
    <string name="valor_obrigatorio">Campo Obrigatório!</string>
    <string name="inputLoginEmail">E-mail</string>
    <string name="inputLoginPassword">Senha</string>
    <string name="needHelp">Precisa de Ajuda?</string>
    <string name="buttonLoginSubmit">Entrar</string>
    <string name="buttonLoginSingIn">Cadastre-se</string>
    <string name="RecorverPass">Recuperar Senha</string>
    <string name="backView">Voltar</string>
    <string name="buttonNeedHelpContinue">Continuar</string>
    <string name="txtInputSingInNome">Nome:</string>
    <string name="requiredInputSingInNome">Campo Nome é obrigatório ou muito curto</string>
    <string name="txtInputSingInCPF">CPF:</string>
    <string name="requiredInputSingInCPF">Campo CPF é obrigatório</string>
    <string name="txtInputSingInEmail">E-mail:</string>
    <string name="requiredInputSingInEmail">Campo E-mail é inválido</string>
    <string name="txtInputSingInDateBirth">Data de Nascimento:</string>
    <string name="requiredInputSingInDateBirth">Campo Data de Nascimento é obrigatório</string>
    <string name="txtInputSingInPhone">Telefone:</string>
    <string name="requiredInputSingInPhone">Campo Telefone é obrigatório</string>
    <string name="txtInputSingInPass">Senha:</string>
    <string name="requiredInputSingInPass">Campo Senha inválido deve ter no mínimo de 8 caracteres</string>
    <string name="txtInputSingInConfirmPass">Confirme sua senha: </string>
    <string name="requiredInputSingInConfirmPass">Campo Confirme sua senha inválido deve ter no mínimo de 8 caracteres</string>
    <string name="requiredInputSingInPassEqual">Campo senha e confirmação de senha não conferem</string>
    <string name="txtInputSingInCEP">CEP:</string>
    <string name="requiredInputSingInCEP">Campo CEP é obrigatório</string>
    <string name="txtInputSingInCity">Cidade:</string>
    <string name="requiredInputSingInCity">Campo Cidade é obrigatório</string>
    <string name="txtInputSingInBairro">Bairro:</string>
    <string name="requiredInputSingInBairro">Campo Bairro é obrigatório</string>
    <string name="txtInputSingInPlace">Logradouro:</string>
    <string name="requiredInputSingInPlace">Campo Logradouro é obrigatório</string>
    <string name="txtInputSingInNumbe">Número:</string>
    <string name="requiredInputSingInNumbe">Campo Número é obrigatório</string>
    <string name="txtInputSingInComp">Complemento:</string>
    <string name="requiredInputSingInComp">Campo Complemento é obrigatorio</string>
    <string name="buttonSingInConfirm">Confirmar</string>
    <string name="txtSingInWelfare">Cadastro Welfare</string>
    <string name="textViewSingInEstado">Estado:</string>
    <string name="errorIncluedPerson">Ocorreu uma falha na inclusão do seu Cadastro verifique as suas informações e tente novamente</string>
    <string name="errorNullState">Por favor informe um Estado Válido para prosseguir com o Cadastro</string>
    <string name="btnMainMenuConsultation">Consultas e Exames</string>
    <string name="btnMainMenuTratament">Tratamentos</string>
    <string name="btnMainMenuContacts">Contatos</string>
    <string name="btnMainMenuHealthInsurance">Planos de Saúde</string>
    <string name="loginInvalidCredentials">Suas credenciais de acesso estão incorretas, por favor, verifique ou solicite ajuda para recuperar sua senha</string>
    <string name="alertDialogLogout">Você quer realmente sair?</string>
    <string name="pref_key">login</string>
    <string name="ChangeYourInformations">Alterar suas informações</string>
    <string name="recommendationsTheSend">Foi enviado ao seu email, um token que deve ser inserido abaixo no respectivo campo \"Token\"</string>
    <string name="recommendations">Irá alterar sua senha somente se o Token for válido</string>
    <string name="txtInputRecoverToken">Token:</string>
    <string name="requiredInputRecoverToken">Token Inválido, por favor verifique seu email e insira digitos válidos</string>
    <string name="btnContactsAdd">Adicionar Contatos</string>
    <string name="txtViewAdicionarContatos">Adicionar Contato</string>
    <string name="adicionarContatoPesquisarPessoa">Pesquise por Pessoas</string>
    <string name="btnPlanoSaudeAdicionar">Adicionar Novo Plano</string>
    <string name="btnAddEditPlanoSaudeConfirmar">Confirmar</string>
    <string name="txtInputAddEditPrestadora">Prestadora</string>
    <string name="txtInputAddEditInstituicaoMedica">Instituição Médica</string>
    <string name="btnAddEditAdicionarInstituicao">Add</string>
    <string name="txtInputAddEditCobertura">Cobertura</string>
    <string name="txtInputEditDataContratacao">Data de Contratação</string>
    <string name="txtInputEditDataValidade">Data Validade</string>
    <string name="txtInputEditValorMensal">Valor Mensal</string>
    <string name="imgAddEditPlanoSaudePesquisarInst">Pesquisar Instituição Médica</string>
    <string name="swtAddEditPlanoSaudeSituacao">Situação</string>
    <string name="InstituicaoMedicaAdd">Adicionar Instituição Médica</string>
    <string name="txtAdicionarInstituicaoMedica">Adicionar Instituição Médica</string>
    <string name="btnConfirm">Confirmar</string>
    <string name="txtInputAddEditInstNome">Nome:</string>
    <string name="txtInputEmail">Email:</string>

</resources>
