<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AdicionarEditarInstituicaoMedica">

    <Button
        android:id="@+id/btnAddInstituicaoMedicaVoltar"
        android:layout_width="32sp"
        android:layout_height="32sp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_arrow_back_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgInstituicaoMedica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_hospital_32dp" />

    <TextView
        android:id="@+id/txtAddInstituicaoMedicaTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/txtAdicionarInstituicaoMedica"
        android:textColor="@color/title"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView4"
        app:layout_constraintEnd_toStartOf="@+id/imgInstituicaoMedica"
        app:layout_constraintStart_toEndOf="@+id/btnAddInstituicaoMedicaVoltar"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintBottom_toTopOf="@+id/btnAddEditInstConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddInstituicaoMedicaTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtInputAddEditInstNome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtInputAddEditInstNome" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtInputAddEditInstEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtInputEmail" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtInputAddEditInstTelefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtInputSingInPhone"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtInputAddEditInstCEP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtInputSingInCEP"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/txtViewAddEditInstEstado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewSingInEstado" />

            <Spinner
                android:id="@+id/spinnerAddEditInstEstado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtInputAddEditInstCidade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtInputSingInCity" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtInputAddEditInstBairro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtInputSingInBairro" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtInputAddEditInstLogradouro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtInputSingInPlace" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtInputAddEditInstNumero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtInputSingInNumbe"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtInputAddEditInstComplemento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtInputSingInComp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnAddEditInstConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="24dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btnConfirm"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView4" />

</android.support.constraint.ConstraintLayout>