<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CadastrarActivity">

    <Button
        android:id="@+id/btnCadastrarVoltar"
        android:layout_width="32sp"
        android:layout_height="32sp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_arrow_back_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgWelfare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_heart_32" />

    <TextView
        android:id="@+id/txtViewCadastrarTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/txtSingInWelfare"
        android:textColor="@color/title"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toStartOf="@+id/imgWelfare"
        app:layout_constraintStart_toEndOf="@+id/btnCadastrarVoltar"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="24dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewCadastrarTitulo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtInputCadastrarNome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtInputSingInNome" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtInputCadastrarCPF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtInputSingInCPF"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtInputCadastrarEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_email_black_24dp"
                    android:drawableRight="@drawable/ic_email_black_24dp"
                    android:gravity="start"
                    android:hint="@string/txtInputSingInEmail"
                    android:inputType="textWebEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtInputCadastrarDataNasc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_date_range_black_24dp"
                    android:drawableRight="@drawable/ic_date_range_black_24dp"
                    android:focusable="false"
                    android:hint="@string/txtInputSingInDateBirth" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtInputCadastrarTelefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtInputSingInPhone"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtInputCadastrarSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtInputSingInPass"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtInputCadastrarConfirmarSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtInputSingInConfirmPass"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtInputCadastrarCEP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtInputSingInCEP"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/textViewSingInEstado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5sp"
                android:paddingRight="5sp"
                android:text="@string/textViewSingInEstado" />

            <Spinner
                android:id="@+id/spinnerCadastrarEstado"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:spinnerMode="dropdown" />




            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtInputCadastrarCidade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtInputSingInCity"
                    android:inputType="textCapSentences" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtInputCadastrarBairro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtInputSingInBairro"
                    android:inputType="textCapSentences" />
            </android.support.design.widget.TextInputLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@+id/textInputLayout"
                    app:layout_constraintHorizontal_bias="0.49"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtInputCadastrarRua"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txtInputSingInPlace"
                        android:inputType="textCapSentences" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textInputLayout2"
                    app:layout_constraintTop_toTopOf="parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtInputCadastrarNumero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txtInputSingInNumbe"
                        android:inputType="number" />

                </android.support.design.widget.TextInputLayout>

            </android.support.constraint.ConstraintLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtInputCadastrarComplemento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtInputSingInComp"
                    android:inputType="textCapSentences" />
            </android.support.design.widget.TextInputLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp">

                <Button
                    android:id="@+id/btnCadastrarConfirmar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="64dp"
                    android:layout_marginLeft="64dp"
                    android:layout_marginEnd="64dp"
                    android:layout_marginRight="64dp"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/buttonSingInConfirm"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>

        </LinearLayout>
    </ScrollView>



</android.support.constraint.ConstraintLayout>