<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AdicionarEditarPlanoSaude">

    <Button
        android:id="@+id/btnPlanoSaudeVoltar"
        android:layout_width="32sp"
        android:layout_height="32sp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_arrow_back_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgPlanoSaude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_hospital_32dp" />

    <TextView
        android:id="@+id/txtPlanoSaudeTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/btnMainMenuHealthInsurance"
        android:textColor="@color/title"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/imgPlanoSaude"
        app:layout_constraintStart_toEndOf="@id/btnPlanoSaudeVoltar"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintBottom_toTopOf="@+id/btnPlanoSaudeConfirmar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtPlanoSaudeTitulo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtInputPlanoSaudePrestadora"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtInputAddEditPrestadora" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="310dp"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtInputPlanoSaudeInstituicao"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txtInputAddEditInstituicaoMedica" />
                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/imgPlanoSaudePesquisaInstituicao"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="12dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/imgAddEditPlanoSaudePesquisarInst"
                    app:srcCompat="@drawable/ic_search_24dp" />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtInputPlanoSaudeCobertura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtInputAddEditCobertura" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtInputPlanoSaudeContratacao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_date_range_black_24dp"
                    android:drawableRight="@drawable/ic_date_range_black_24dp"
                    android:focusable="false"
                    android:hint="@string/txtInputEditDataContratacao" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtInputPlanoSaudeValidade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_date_range_black_24dp"
                    android:drawableRight="@drawable/ic_date_range_black_24dp"
                    android:focusable="false"
                    android:hint="@string/txtInputEditDataValidade" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtInputPlanoSaudeValorMensal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtInputEditValorMensal" />
            </android.support.design.widget.TextInputLayout>

            <Switch
                android:id="@+id/swtPlanoSaudeSituacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/swtAddEditPlanoSaudeSituacao"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnPlanoSaudeConfirmar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="24dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btnAddEditPlanoSaudeConfirmar"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />

</android.support.constraint.ConstraintLayout>